<resources>
    <string name="app_name">Entrata Facilities</string>
    <string name="field_indicator">Field Indicator</string>
    <string name="login">Login</string>
    <string name="send_password_reset">Send Password Reset</string>
    <string name="subdomain">SUBDOMAIN</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_name">USERNAME</string>
    <string name="your_domain">Your subdomain is an identifier \n unique to your company which is \n used to access entrata.</string>
    <string name="If_you_are_unsure_of_your_domain">If you are unsure of your \n subdomain, please contact your \n IT administrator.</string>
    <string name="domain"><u>subdomain</u></string>
    <string name="left_icon">left icon</string>
    <string name="my_tasks">My Tasks</string>
    <string name="inspections">Inspections</string>
    <string name="no_current_tasks">No Current Tasks</string>
    <string name="nice_work">Nice Work!</string>
    <string name="no_current_work_orders">No Current Work Orders</string>
    <string name="no_current_inspections">No Current Inspections</string>
    <string name="assign">Assign</string>
    <string name="abbr_service_request">SR</string>
    <string name="concatenate_without_space">%s%s</string>
    <string name="abbrv_inspections">IM</string>
    <string name="username_or_password_is_incorrect">Username or password is incorrect</string>
    <string name="email">EMAIL</string>
    <string name="email_sent">Email Sent</string>
    <string name="entrata">Entrata</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="entrata_com">.entrata.com</string>
    <string name="what_is_my_subdomain">WHAT\'S MY SUBDOMAIN?</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="settings">Settings</string>
    <string name="about_this_app_text">About This App</string>
    <string name="about_this_app_version">Version:</string>
    <string name="about_this_app_build_text"> build </string>
    <string name="about_this_app_beta_text">**This is a beta version of this app. Some functionality is not yet available**</string>
    <string name="updated_text">Updated:</string>
    <string name="entrata_year">©2023 Entrata</string>
    <string name="close_subdomain">Close Subdomain</string>
    <string name="required_field">This field is required…</string>
    <string name="email_or_subdomain_incorrect">Email and/or subdomain is incorrect</string>
    <string name="app_release_date">03/10/2023</string>
    <string name="ok">Ok</string>
    <string name="internet_error_message">Please check your wi-fi or cellular data connection and try again.</string>
    <string name="assigned_to_updated">Assigned to updated</string>
    <string name="failed">FAILED</string>
    <string name="photos">PHOTOS</string>
    <string name="permission_to_enter">Permission to enter</string>
    <string name="animals">Animals</string>
    <string name="Property">Property</string>
    <string name="start_work">Start Work</string>
    <string name="stop_work">Stop Work</string>
    <string name="description">Description</string>
    <string name="sub_tasks_unknown">Subtasks (%s)</string>
    <string name="subtask_deleted"> Sub-task deleted successfully.</string>
    <string name="content_close">Close screen</string>
    <string name="content_unit_information">Unit Information</string>
    <string name="content_assigned_icon">Assigned to</string>
    <string name="calender_icon">CalenderIcon</string>
    <string name="history">History</string>
    <string name="name">NAME</string>
    <string name="send">Send</string>
    <string name="content_selection_tick">Selection check mark</string>
    <string name="call">Call</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="unassigned">Unassigned</string>
    <string name="scheduler_unknown">Scheduled: %s</string>
    <string name="created_unknown">Created: %s</string>
    <string name="completed_unknown">Completed: %s</string>
    <string name="save">Save</string>
    <string name="captured_picture">Captured picture</string>
    <string name="add_notes">Add notes</string>
    <string name="visible_to_resident">Visible to resident</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="due_date_unknown">Due: %s</string>
    <string name="status_only">status</string>
    <string name="dash">-</string>
    <string name="double_dash">--</string>
    <string name="notes">Notes</string>
    <string name="notes_unknown">Notes (%s)</string>
    <string name="update_status_menu">Update Status</string>
    <string name="add_new_note">Add a new note</string>
    <string name="status_updated">Status updated successfully</string>
    <string name="connection_lost">Connection was lost</string>
    <string name="date_created">Created %s </string>
    <string name="delete">Delete</string>
    <string name="no_history_data">No History Data</string>
    <string name="note">Note</string>
    <string name="note_added">Note added</string>
    <string name="note_add_failed">Note add failed</string>
    <string name="unit_details">Unit Details</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="attachment_deleted">Attachment deleted successfully</string>
    <string name="attachment_note_edited">Attachment note edited successfully</string>
    <string name="attachment_saved">Attachment added</string>
    <string name="delete_attachment_failed">Delete attachment failed</string>
    <string name="search">Search</string>
    <string name="permission_messege">App need permissions for capturing images from Gallery and Camera. Please grant permissions by following given path.\n App Settings -> Permissions</string>
    <string name="problem">Problem</string>
    <string name="general">general</string>
    <string name="create">Create</string>
    <string name="type">Type</string>
    <string name="unit_resident_title">Unit/Resident</string>
    <string name="assigned_employee">Assigned Employee</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="add_sub_task">Add Subtask</string>
    <string name="delete_create_work_order_data">Do you want to cancel creation of this work order?</string>
    <string name="view">View</string>
    <string name="done">Done</string>
    <string name="action">Action</string>
    <string name="inspection_repairs">Inspection Repairs</string>
    <string name="inspected_by">Inspected: %s</string>
    <string name="inspection">Inspection</string>
    <string name="update">update</string>
    <string name="subtask_added_successfully">Sub-task added successfully.</string>
    <string name="subtask">Subtask</string>
    <string name="colon">:</string>
    <string name="_00">00</string>
    <string name="improper_setup_error_message">Your property requires locations and problems to create work orders. Please contact a system administrator.</string>
    <string name="no_matching_results">No Matching Results</string>
    <string name="next">Next</string>
    <string name="service_request_created">Service request created</string>
    <string name="montserrat_regular_font_full_path" translatable="false">montserrat/Montserrat-Regular.ttf</string>
    <string name="montserrat_light_font_full_path" translatable="false">montserrat/Montserrat-Light.ttf</string>
    <string name="montserrat_regular_font" translatable="false">Montserrat-Regular.ttf</string>
    <string name="montserrat_light_font" translatable="false">Montserrat-Light.ttf</string>
    <string name="montserrat_bold_font" translatable="false">Montserrat-Bold.ttf</string>
    <string name="montserrat_semi_bold_font" translatable="false">Montserrat-SemiBold.otf</string>
    <string name="montserrat_italic_font" translatable="false">Montserrat-Italic.ttf</string>
    <string name="montserrat_medium_font" translatable="false">Montserrat-Medium.ttf</string>
    <string name="close_about_this_screen">Close about this screen</string>
    <string name="unit">Unit</string>
    <string name="property">Property</string>
    <string name="entry_notes">Entry Notes</string>
    <string name="attached_image">attached image</string>
    <string name="brown_entrata_bold_font_full_path" translatable="false">roboto/BrownEntrataTT-Bold.ttf</string>
    <string name="brown_entrata_display_font_full_path" translatable="false">roboto/BrownEntrataTT-Display.ttf</string>
    <string name="montserrat_bold_font_full_path" translatable="false">montserrat/Montserrat-Bold.ttf</string>
    <string name="montserrat_semi_bold_italic" translatable="false">montserrat/Montserrat-SemiBoldItalic.ttf</string>
    <string name="vacant">VACANT</string>
    <string name="overview">Overview</string>
    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="under_review">Under Review</string>
    <string name="past_due">Past Due</string>
    <string name="approved">Approved</string>
    <string name="service_request">Service Request</string>
    <string name="service_requests">Service Requests</string>
    <string name="recurring">Recurring</string>
    <string name="make_ready">Make Ready</string>
    <string name="make_readies">Make Readies</string>
    <string name="feature_upgrade">Feature Upgrade</string>
    <string name="for_example">For example:</string>
    <string name="forgot_password_message">No problem! Enter your email\naddress below and we\'ll send you\na link to reset your password.</string>
    <string name="unable_to_load_database_error_message">Unable to load the database for the subdomain you provided.</string>
    <string name="the_item_you_were_viewing_is_no_longer_available">The item you were viewing is no longer available.</string>
    <string name="sort_by">Sort by</string>
    <string name="done_caps">Done</string>
    <string name="date_created_oldest_to_newest">Date Created: Oldest to Newest</string>
    <string name="date_created_newest_to_oldest">Date Created: Newest to Oldest</string>
    <string name="date_scheduled_oldest_to_newest">Date Scheduled: Oldest to Newest</string>
    <string name="date_scheduled_newest_to_oldest">Date Scheduled: Newest to Oldest</string>
    <string name="date_due_oldest_to_newest">Date Due: Oldest to Newest</string>
    <string name="date_due_newest_to_oldest">Date Due: Newest to Oldest</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="created">Created</string>
    <string name="scheduled">Scheduled</string>
    <string name="respond_by">Respond By</string>
    <string name="due_by">Due By</string>
    <string name="anytime">Anytime</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_unknown_days">Last %s days</string>
    <string name="custom_range">Custom Range…</string>
    <string name="date_type">Date Type</string>
    <string name="timing">Timing</string>
    <string name="unknown_filter_applied">%s Filter Applied</string>
    <string name="unknown_filters_applied">%s Filters Applied</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="assigned_to">Assigned to</string>
    <string name="txt_facilities">Facilities</string>
    <string name="user_name_new">Username</string>
    <string name="sub_domain_new">Subdomain</string>
    <string name="password_new">Password</string>
    <string name="invalid_username_password_dialogue_title">We don\'t recognize your username or password.</string>
</resources>